@@ -441,8 +441,8 @@ settings:
   playlist_report: false
   verify_ssl: true
   custom_repo:
-  overlay_artwork_filetype: jpg
-  overlay_artwork_quality: 72
+  overlay_artwork_filetype: webp_lossy
+  overlay_artwork_quality: 90
 webhooks:                        # Can be individually specified per library as well
   error:
   version:
