@@ -29,6 +29,7 @@ Added GitHub token validation during config validation.
 Added `plex` ratings source for mass operations.
 Added IMDb Interests (sub-genres) to `imdb_search` builder
 Allow `server_preroll` to accept a list
+Changed default `overlay_artwork_filetype` to `webp_lossy` and `overlay_artwork_quality` to 90
 
 # Docs
 Added "getting started" page
